Fix frontpage categories name wrapping

--- a/shared/scss/components/cms/categories.scss
+++ b/shared/scss/components/cms/categories.scss
@@ -71,7 +71,8 @@
   color: $category-box-text-color;
   margin: 0 $base/2;
   text-transform: uppercase;
-
+  word-break: break-word;
+  
   @media (min-width: $width-xs) {
     margin: $base/2 auto;
   }
